--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
 	"type": "module",
 	"license": "ISC",
 	"dependencies": {
+		"@sentry/react": "^8.47.0",
 		"axios": "^1.7.2",
 		"bcryptjs": "^2.4.3",
 		"cookie-parser": "^1.4.6",
+		"cors": "^2.8.5",
 		"cross": "^1.0.0",
 		"dotenv": "^16.4.5",
 		"env": "^0.0.2",
